# libcangjie

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  Dockerfile  INSTALL.md  INSTALL.rst  Makefile.am  README  README.md  README.rst  autogen.sh  configure.ac
data/: README.table.md  README.table.rst  cangjie2.pc.in  table.txt
docs/: cangjie.md  cangjiechar.md  cangjiecharlist.md  cli.md  errors.md  filters.md  index.md  versions.md
src/: bench.c  cangjie.c  cangjie.h  cangjiechar.c  cangjiechar.h  cangjiecharlist.c  cangjiecharlist.h  cangjiecommon.h  cangjieerrors.h  cli.c  dbbuilder.c  utils.c  utils.h
tests/: test_cangjie.c  test_cangjiechar.c  test_cangjiecharlist.c
